values assigned to each image. more testing needed

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 
                 <br>
 
-                <div id="firstCrystal" class="col-sm-3 text-left">Crystal</div>
-                <div id="secondCrystal" class="col-sm-3 text-left">Crystal</div>
-                <div id="thirdCrystal" class="col-sm-3 text-left">Crystal</div>
-                <div id="fourthCrystal" class="col-sm-3 text-left">Crystal</div>
+                <div id="firstCrystal" class="col-sm-3 text-center">Crystal 1</div>
+                <div id="secondCrystal" class="col-sm-3 text-center">Crystal 2</div>
+                <div id="thirdCrystal" class="col-sm-3 text-center">Crystal 3</div>
+                <div id="fourthCrystal" class="col-sm-3 text-center">Crystal 4</div>
 
 
 
@@ -163,3 +163,6 @@
 </body>
 
 </html>
+
+
+
